--- a/task-04.html
+++ b/task-04.html
@@ -11,15 +11,15 @@
     <p><a href="index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="text-form">
         Email
-        <input type="email" name="email" />
+        <input class="input-form" type="email" name="email" />
       </label>
-      <label>
+      <label class="text-form">
         Password
-        <input type="password" name="password" />
+        <input class="input-form" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="btn-form" type="submit">Log in</button>
     </form>
 
     <script src="./js/task-04.js" type="module"></script>
