--- a/task-06.html
+++ b/task-06.html
@@ -10,14 +10,15 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <div id="controls">
-      <input type="number" min="1" max="100" step="1" />
-      <button type="button" data-create>Create</button>
-      <button type="button" data-destroy>Destroy</button>
+    <div class="container">
+      <div id="controls">
+        <input class="input" type="number" min="1" max="100" step="1" />
+        <button class="btn-create" type="button" data-create>Create</button>
+        <button class="btn-destroy" type="button" data-destroy>Destroy</button>
+      </div>
+
+      <div id="boxes"></div>
     </div>
-
-    <div id="boxes"></div>
-
     <script src="./js/task-06.js" type="module"></script>
   </body>
 </html>
